--- a/app/src/main/res/layout/shoulder.xml
+++ b/app/src/main/res/layout/shoulder.xml
@@ -1,9 +1,6 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="fossasia.valentina.bodyapp.main.ItemActivity"
-    tools:ignore="MergeRootFrame" >
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,7 +29,6 @@
                 android:layout_weight=".5"
                 android:ems="10"
                 android:hint="Across back shoulder width" >
-
                 <requestFocus />
             </EditText>
 
@@ -62,8 +58,6 @@
                 android:layout_weight=".5"
                 android:ems="10"
                 android:hint="Shoulder drop" >
-
-                <requestFocus />
             </EditText>
 
             <TextView
@@ -93,7 +87,6 @@
                 android:ems="10"
                 android:hint="Shoulder slope degrees" >
 
-                <requestFocus />
             </EditText>
 
             <TextView
@@ -104,7 +97,65 @@
                 android:text="degrees" />
 
             <Button
-                android:id="@+id/shoulder_slope_degrees"
+                android:id="@+id/btn_shoulder_slope_degrees"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight=".2"
+                android:text="@string/help" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="1" >
+
+            <EditText
+                android:id="@+id/shoulder_length"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight=".5"
+                android:ems="10"
+                android:hint="Shoulder length" >
+
+            </EditText>
+
+            <TextView
+                android:id="@+id/vsa_txt_mid_neck_girth"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight=".3"/>
+
+            <Button
+                android:id="@+id/btn_shoulder_length"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight=".2"
+                android:text="@string/help" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="1" >
+
+            <EditText
+                android:id="@+id/shoulder_and_arm_length"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight=".5"
+                android:ems="10"
+                android:hint="Shoulder &amp; arm length" >
+
+            </EditText>
+
+            <TextView
+                android:id="@+id/vsa_txt_mid_neck_girth"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight=".3"/>
+
+            <Button
+                android:id="@+id/btn_shoulder_and_arm_length"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_weight=".2"
@@ -112,4 +163,4 @@
         </LinearLayout>
     </LinearLayout>
 
-</FrameLayout>
+</ScrollView>
