--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
-    tools:context="fossasia.valentina.bodyapp.main.CreateActivity"
+    tools:context="org.fashiontec.bodyapp.main.CreateActivity"
     tools:ignore="MergeRootFrame" >
 
     <LinearLayout
