--- a/app/src/main/res/layout-land/fragment_measurement.xml
+++ b/app/src/main/res/layout-land/fragment_measurement.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    tools:context="fossasia.valentina.bodyapp.main.MeasurementActivity$PlaceholderFragment" >
+    tools:context="org.fashiontec.bodyapp.main.MeasurementActivity$PlaceholderFragment" >
 
     <LinearLayout
         android:layout_width="fill_parent"
