--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,7 +3,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fossasia.valentina.bodyapp.main.SettingsActivity"
+    tools:context="org.fashiontec.bodyapp.main.SettingsActivity"
     tools:ignore="MergeRootFrame" >
 
     <LinearLayout
