--- a/app/src/main/res/layout/activity_view_saved.xml
+++ b/app/src/main/res/layout/activity_view_saved.xml
@@ -3,6 +3,6 @@
     android:id="@+id/container2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fossasia.valentina.bodyapp.main.ViewSavedActivity"
+    tools:context="org.fashiontec.bodyapp.main.ViewSavedActivity"
     tools:ignore="MergeRootFrame" />
 
