--- a/app/src/main/res/layout/fragment_measurement.xml
+++ b/app/src/main/res/layout/fragment_measurement.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#ffffff"
-    tools:context="fossasia.valentina.bodyapp.main.MeasurementActivity$PlaceholderFragment" >
+    tools:context="org.fashiontec.bodyapp.main.MeasurementActivity$PlaceholderFragment" >
 
     <LinearLayout
         android:layout_width="fill_parent"
