--- a/app/src/main/res/layout/fragment_saved.xml
+++ b/app/src/main/res/layout/fragment_saved.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:background="#FFFFFF"
 
-    tools:context="fossasia.valentina.bodyapp.main.SavedActivity$PlaceholderFragment" >
+    tools:context="org.fashiontec.bodyapp.main.SavedActivity$PlaceholderFragment" >
 
     <LinearLayout
         android:layout_width="fill_parent"
