--- a/app/src/main/res/layout/leg.xml
+++ b/app/src/main/res/layout/leg.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fossasia.valentina.bodyapp.main.ItemActivity"
+    tools:context="org.fashiontec.bodyapp.main.ItemActivity"
     tools:ignore="MergeRootFrame" >
 
     <TextView
