Finished picture sync. Added copyright to xml files.

--- a/app/src/main/res/values/gender.xml
+++ b/app/src/main/res/values/gender.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--Copyright (c) 2014, Fashiontec (http://fashiontec.org)-->
+<!--Licensed under LGPL, Version 3-->
+
 <resources>
     <string-array name="gender_array">
         <item>Female</item>
