--- a/app/src/main/res/drawable-nodpi/ios_btn.xml
+++ b/app/src/main/res/drawable-nodpi/ios_btn.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--Copyright (c) 2014, Fashiontec (http://fashiontec.org)-->
+<!--Licensed under LGPL, Version 3-->
+
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
      <item android:state_pressed="true" >
          <shape android:shape="rectangle"  >
@@ -30,3 +33,4 @@
      </item>
 
 </selector>
+
