--- a/app/src/main/res/drawable-nodpi/round_corner_color.xml
+++ b/app/src/main/res/drawable-nodpi/round_corner_color.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--Copyright (c) 2014, Fashiontec (http://fashiontec.org)-->
+<!--Licensed under LGPL, Version 3-->
+
         <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
             <stroke
