--- a/app/src/main/res/layout/activity_view_saved.xml
+++ b/app/src/main/res/layout/activity_view_saved.xml
@@ -1,3 +1,6 @@
+<!--Copyright (c) 2014, Fashiontec (http://fashiontec.org)-->
+<!--Licensed under LGPL, Version 3-->
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container2"
