--- a/app/src/main/res/layout/saved_tab.xml
+++ b/app/src/main/res/layout/saved_tab.xml
@@ -1,3 +1,6 @@
+<!--Copyright (c) 2014, Fashiontec (http://fashiontec.org)-->
+<!--Licensed under LGPL, Version 3-->
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
