Changed the package to org.fashiontec.bodyapps

--- a/app/src/main/res/layout-land/activity_measurement.xml
+++ b/app/src/main/res/layout-land/activity_measurement.xml
@@ -6,7 +6,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.fashiontec.bodyapp.main.MeasurementActivity"
+    tools:context="org.fashiontec.bodyapps.main.MeasurementActivity"
     tools:ignore="MergeRootFrame" >
 
     <LinearLayout
@@ -16,7 +16,7 @@
 
         <fragment
             android:id="@+id/fragment1"
-            android:name="org.fashiontec.bodyapp.main.MeasurementActivity$GridFragment"
+            android:name="org.fashiontec.bodyapps.main.MeasurementActivity$GridFragment"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.5" />
