--- a/app/src/main/res/layout-land/activity_saved.xml
+++ b/app/src/main/res/layout-land/activity_saved.xml
@@ -6,7 +6,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.fashiontec.bodyapp.main.SavedActivity"
+    tools:context="org.fashiontec.bodyapps.main.SavedActivity"
     tools:ignore="MergeRootFrame" 
     android:weightSum="1.0">
 
@@ -18,7 +18,7 @@
 
         <fragment
             android:id="@+id/fragment1"
-            android:name="org.fashiontec.bodyapp.main.SavedActivity$SavedList"
+            android:name="org.fashiontec.bodyapps.main.SavedActivity$SavedList"
             android:layout_width="0dip"
             android:layout_height="match_parent" 
             android:layout_weight=".4"/>
