--- a/app/src/main/res/layout/activity_saved.xml
+++ b/app/src/main/res/layout/activity_saved.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context="org.fashiontec.bodyapp.main.SavedActivity"
+    tools:context="org.fashiontec.bodyapps.main.SavedActivity"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -16,7 +16,7 @@
 
     <fragment
         android:id="@+id/fragment1"
-        android:name="org.fashiontec.bodyapp.main.SavedActivity$SavedList"
+        android:name="org.fashiontec.bodyapps.main.SavedActivity$SavedList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
