--- a/app/src/main/res/layout/trunk.xml
+++ b/app/src/main/res/layout/trunk.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.fashiontec.bodyapp.main.ItemActivity"
+    tools:context="org.fashiontec.bodyapps.main.ItemActivity"
     tools:ignore="MergeRootFrame" >
 
     <TextView
