--- a/app/src/main/res/menu/saved.xml
+++ b/app/src/main/res/menu/saved.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="org.fashiontec.bodyapp.main.SavedActivity" >
+    tools:context="org.fashiontec.bodyapps.main.SavedActivity" >
 
     <item
         android:id="@+id/action_settings"
